This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.5.8
  BugFix: Values with "," inside could break the CSV report (#1831512)
  BugFix: Failed to create backup file in folder compare (#1835283)

WinMerge 2.7.5.7 - 2007-11-19 (r4772)
  Remove MFC dependency from ShellExtension (#1833521)
  Update ShellExtension icon to new WinMerge icon (#1833616)
  BugFix: Build script didn't update PO files correctly before copying (r4756)
  BugFix: ShellExtension's icon was clipped if system font size was small
    (#1833616)
  BugFix: Merge controls were not enabled for missing lines (#1833714)

WinMerge 2.7.5.6 - 2007-11-15 (r4752)
  BugFix: Many translation-system related fixes and improvements (#1804762)
  BugFix: When copying files to VCS system, destination file was
    not checked out (#1828930)
  BugFix: Visible area indicator on location pane shook when clicking
    above or below the vertical scroll bar to scroll one screen (#1829572)
  Translation updates:
  - Croatian (#1829301)
  - Japanese (r4730)

WinMerge 2.7.5.5 - 2007-11-08 (r4722)
  Bugfix: Don't enable merge GUI for ignored differences (#1826375)
  BugFix: PgUp key caused the error message "An invalid argument was
    encountered" when word-wrap mode was on (#1820631)
  BugFix: Keep selected items visible in Folder Compare columns dialog (r4715)
  BugFix: Disable Folder Compare column selection dialog's up/down buttons
    when first/last items are selected (r4716)
  BugFix: Many translation-system related fixes and improvements (#1804762)
  Add Croatian translation (#1820308)
  Translation updates:
  - Chinese Traditional (#1824691)

WinMerge 2.7.5.4 - 2007-11-01 (r4687)
  New PO files based translation system (#1804762)
  New folder compare column selection dialog (#1804555)
  Install WinMerge.exe (ANSI version) only for Windows 95/98/ME (#1809140)